<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.ProgressBar"

        android:layout_gravity="center"/>
    <LinearLayout
        android:id="@+id/root_layout"

        android:background="@color/colorPrimary"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"

            android:src="@drawable/icon"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"

            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"

                    android:textSize="24sp"
                    android:textColor="@android:color/black"

                    android:hint="@string/username"

                    app:met_floatingLabel="normal"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="16dp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:imeOptions="actionDone"

                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:inputType="textPassword"

                    android:hint="@string/password"

                    app:met_floatingLabel="normal"
                    android:drawableLeft="@drawable/ic_key"
                    android:drawablePadding="16dp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/remember_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:checked="true"
            android:text="@string/remember_me"
            android:textColor="@android:color/white"
            android:textSize="20sp"

            android:layout_marginBottom="15dp"

            app:buttonTint="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="5dp"

            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/sign_up"
                android:textColor="@color/gray"
                android:textSize="17sp"

                android:backgroundTint="@android:color/white"

                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/sign_in"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"

                android:backgroundTint="@android:color/white"

                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>