<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="8dp"

        app:cardElevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_new_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:imeOptions="actionNext"
                android:inputType="textPersonName"

                android:textSize="24sp"
                android:textColor="@android:color/black"

                android:hint="@string/username"

                app:met_floatingLabel="normal"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="16dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_new_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:imeOptions="actionNext"

                android:textSize="24sp"
                android:textColor="@android:color/black"

                android:hint="@string/email"
                android:inputType="textEmailAddress"

                app:met_floatingLabel="normal"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="16dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_new_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:imeOptions="actionDone"

                android:textSize="24sp"
                android:textColor="@android:color/black"

                android:hint="@string/password"
                android:inputType="textPassword"

                app:met_floatingLabel="normal"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="16dp"/>

        </LinearLayout>
</android.support.v7.widget.CardView>
